# alphabeta_project

./: .gitignore  README.md  alphaBetaV1.cpp  alpha_beta_simple.cpp  maintestscesar.cpp
jeu_arlecchino/: CMakeLists.txt  arbitre.cc  arbitre.hh  jeu.cc  jeu.hh  main.cc  man.txt  piece.cc  piece.hh  zobrist.cc  zobrist.hh
jeu_arlecchino/joueurs/: CMakeLists.txt  joueur.cc  joueur.hh  joueur_alphaBeta_.cc  joueur_alphaBeta_.hh  joueur_alphaBeta_Simple.cc  joueur_alphaBeta_Simple.hh  joueur_manuel.cc  joueur_manuel.hh  joueur_montecarlo_.cc  joueur_montecarlo_.hh  joueur_random.cc  joueur_random.hh
